--- a/404.html
+++ b/404.html
@@ -3,4 +3,4 @@
 <a class=logo href=/>Home</a>
 <a href=/pages>Pages</a>
 <a href=/about>About Me</a>
-<a href=/contact>Contact</a></div></nav><main><div class=content><section><h2>404 Page Not Found</h2><h4>There's nothing here...</h4><img src=/images/portalcake.jpg></section></div></main><footer><span>&copy;2018-2021 D. Richline </span><a rel=license href=http://creativecommons.org/licenses/by/4.0/><img alt="Creative Commons License" style=border-width:0 src=/images/80x15.png></a><br><span>Served with care.</span></footer></body></html>
+<a href=/contact>Contact</a></div></nav><main><div class=content><section><h2>404 Page Not Found</h2><h4>There's nothing here...</h4><img src=/images/portalcake.jpg></section></div></main><footer><span>&copy;2018-2021 Dakota Richline </span><a rel=license href=http://creativecommons.org/licenses/by/4.0/><img alt="Creative Commons License" style=border-width:0 src=/images/80x15.png></a><br><span>Served with care.</span></footer></body></html>
